# final_project

./: .gitignore  README.md  Untitled.ipynb  pyproject 2.toml  pyproject.toml
.virtual_documents/notebooks/: correlation_rank.ipynb  nomads_analysis.ipynb
data/clean/: nomads_all_merged.csv  sql_cost_of_living.csv  sql_internet_speed.csv  sql_nomads.csv  sql_quality_of_life.csv  sql_users_trips.csv  sql_users_work.csv  sql_users_work_split.csv  sql_wework copy.csv  sql_wework.csv  tableau_nomads.xlsx  trip_df_cleaned.csv  users_wework.csv  users_work_ver.csv
data/raw/: Nomads_Data.csv  data_clean.ipynb  wework_data.csv
data/raw/.ipynb_checkpoints/: data_clean-checkpoint.ipynb
data/sql/: drawSQL-mysql-export-2025-03-04.sql  nomads.sql
notebooks/: data_clean.ipynb  file_formet.ipynb  hypothesis_testing.ipynb  nomads_analysis.ipynb  normalization.ipynb  tableau_data_export.ipynb  wework_web_scrape.ipynb
notebooks/web_scrape/: gypsylist.py  test_selenium.py
tableau/: nomads_v1.twb  nomads_v2.twb
