[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ftfy>=6.3.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "plotly-express>=0.4.1",
    "pycountry>=24.6.1",
    "pymysql>=1.1.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.38",
    "xlsxwriter>=3.2.2",
]
